fix overflow issue

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */ /* Doesn't work well with overflow  */
   font-size: calc(10px + 2vmin);
   color: white;
 }
